added dashboard analytis for super admin and admin Or Create Deals and offers for the customer create and update by admin and super admin
